# ephemerides

./: .gitignore  LICENSE  Makefile  README.md  ephemerides.typ  formats.typ  parseICD.py  pyproject.toml  requirements.txt
.github/workflows/: generate.yaml
BeiDou/: D1.md  D1.yaml
GLONASS/: L1OC.md  L1OC.yaml
GPS/: LNAV-L.md  LNAV-L.yaml  LNAV_1-32.yaml  README.md
Galileo/: FNAV.md  FNAV.yaml  INAV.md  INAV.yaml
gnss_parser/: __init__.py  __main__.py  accumulate.py  bits.py  constellations.py  ephemerides.py  field.py  format.py  markdown.py  ublox.py  units.py  yaml.py
gnss_parser/formats/: __init__.py  field.py  field_array.py  format.py  handler.py
gnss_parser/generators/: markdown.py  zig.py
gnss_parser/subscribers/: ephemerides.py
gui/: build.zig  build.zig.zon  main.zig
src/gnss_parser/: __main__.py  bits.py  constellations.py  field.py  format.py  to_json.py  ublox.py  units.py  yaml.py
src/gnss_parser/generators/: markdown.py  zig.py
test/: one_galileo.ubx  one_glonass.ubx  one_gps.ubx  sample_sfrbx.ubx  three_GPS_ephemerides.ubx  two.ubx
utilz/: README.md  build.zig  build.zig.zon  main.zig  root.zig  ublox_loop.zig
zig/: build.zig  build.zig.zon  main.zig
zig/utilz/: bit_reader.zig  build.zig  build.zig.zon  ephemeris.zig  main.zig  root.zig
zparser/: bit_reader.zig
