[project]
name = "ephemerides"
version = "0.0.1"
description = "Read yaml ICD files, to generate code or parse ublox stream"
keywords = ['GNSS', 'GPS', 'Galileo', 'ublox']
readme = "README.md"
authors = [{name = "Antoine GAGNIERE"}]
license = 'MIT'
license-files = ['LICENSE']
requires-python = ">= 3.11"
dependencies = [
    "astropy>=7.0.1",
    "more-itertools>=10.7.0",
    "pyserial>=3.5",
    "pyubx2>=1.2.51",
    "pyyaml>=6.0.2",
]

[project.urls]
Repository = "https://github.com/Orolia2s/ephemerides"
Issues = "https://github.com/Orolia2s/ephemerides/issues"

[project.scripts]
ephemerides = "gnss_parser.__main__:main"
